tests/transpiler/x/zig/cross_join_triple.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/cross_join_triple.zig:23:9: error: local variable is never mutated
/workspace/mochi/tests/transpiler/x/zig/cross_join_triple.zig:23:9: note: consider using 'const'
